[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/slash_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/health_system.gd" type="Script" id=3]
[ext_resource path="res://Sprites/empty_heart.png" type="Texture" id=4]
[ext_resource path="res://Sprites/heart.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/PixelGameFont.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "Heartbeat"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 7.5, 7.5 ), Vector2( 5, 5 ) ]
}

[node name="Health" type="Control"]
margin_right = 300.0
margin_bottom = 75.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
empty_hearth = ExtResource( 4 )
full_hearth = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 39.6998, 25.8909 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Slash" type="Sprite" parent="Sprite"]
visible = false
position = Vector2( -0.0389614, -0.992176 )
texture = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( 84.6998, 25.8909 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Slash" type="Sprite" parent="Sprite1"]
visible = false
position = Vector2( -0.0389614, -0.992176 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 129.7, 25.8909 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Slash" type="Sprite" parent="Sprite2"]
visible = false
position = Vector2( -0.0389614, -0.992176 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 174.7, 25.8909 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Slash" type="Sprite" parent="Sprite3"]
visible = false
position = Vector2( -0.0389614, -0.992176 )
texture = ExtResource( 1 )

[node name="HealthPlus" type="Label" parent="."]
visible = false
margin_left = 206.052
margin_top = 22.1189
margin_right = 221.052
margin_bottom = 55.1189
custom_fonts/font = SubResource( 2 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="HealthPlus"]
position = Vector2( 30.9194, 3.56763 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]

[node name="Heartbeat" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/Heartbeat = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
